pkgs/ndarray/hook/custom_ufuncs.h

/* ============================================================================
 * SECTION 2: FLAT CONTIGUOUS VECTOR MATHEMATICS (ufuncs)
 * ============================================================================
 * Optimized flat vector sweeps operating on sequential same-shape memory arrays.
 * Bypasses coordinate translation and stride checking entirely for peak performance.
 */

void v_add_double(const double *a, const double *b, double *res, int size);
void v_sub_double(const double *a, const double *b, double *res, int size);
void v_mul_double(const double *a, const double *b, double *res, int size);
void v_div_double(const double *a, const double *b, double *res, int size);
void v_sin_double(const double *src, double *res, int size);
void v_cos_double(const double *src, double *res, int size);