pkgs/ndarray/lib/src/ndarray_bindings.dart

// Automatically generated by ffigen. DO NOT EDIT.
// ignore_for_file: type=lint, unused_element, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
@ffi.DefaultAsset('package:ndarray/ndarray')
library;

import 'dart:ffi' as ffi;

/// ----------------------------------------------------------------------------
/// Public Sorters with Kind Parameter
/// kind: 0 = quicksort, 1 = mergesort/stable, 2 = heapsort
/// ----------------------------------------------------------------------------
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Int, ffi.Int)>()
external void native_sort_double(
  ffi.Pointer<ffi.Double> array,
  int size,
  int kind,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Int, ffi.Int)>()
external void native_sort_float(
  ffi.Pointer<ffi.Float> array,
  int size,
  int kind,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.LongLong>, ffi.Int, ffi.Int)>()
external void native_sort_int64(
  ffi.Pointer<ffi.LongLong> array,
  int size,
  int kind,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Int, ffi.Int)>()
external void native_sort_int32(ffi.Pointer<ffi.Int> array, int size, int kind);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Int, ffi.Int)>()
external void native_sort_complex128(
  ffi.Pointer<ffi.Double> array,
  int size,
  int kind,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Int, ffi.Int)>()
external void native_sort_complex64(
  ffi.Pointer<ffi.Float> array,
  int size,
  int kind,
);

/// ----------------------------------------------------------------------------
/// Public Argsort Sorters with Kind Parameter
/// ----------------------------------------------------------------------------
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void native_argsort_double(
  ffi.Pointer<ffi.Double> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  int kind,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void native_argsort_float(
  ffi.Pointer<ffi.Float> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  int kind,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.LongLong>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void native_argsort_int64(
  ffi.Pointer<ffi.LongLong> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  int kind,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void native_argsort_int32(
  ffi.Pointer<ffi.Int> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  int kind,
);

/// ----------------------------------------------------------------------------
/// Public Partition Sorters
/// ----------------------------------------------------------------------------
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_partition_double(
  ffi.Pointer<ffi.Double> array,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_partition_float(
  ffi.Pointer<ffi.Float> array,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.LongLong>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_partition_int64(
  ffi.Pointer<ffi.LongLong> array,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_partition_int32(
  ffi.Pointer<ffi.Int> array,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_partition_complex128(
  ffi.Pointer<ffi.Double> array,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_partition_complex64(
  ffi.Pointer<ffi.Float> array,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

/// ----------------------------------------------------------------------------
/// Public Argpartition Sorters
/// ----------------------------------------------------------------------------
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_argpartition_double(
  ffi.Pointer<ffi.Double> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_argpartition_float(
  ffi.Pointer<ffi.Float> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.LongLong>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_argpartition_int64(
  ffi.Pointer<ffi.LongLong> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_argpartition_int32(
  ffi.Pointer<ffi.Int> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_argpartition_complex128(
  ffi.Pointer<ffi.Double> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void native_argpartition_complex64(
  ffi.Pointer<ffi.Float> data,
  ffi.Pointer<ffi.Int> indices,
  int size,
  ffi.Pointer<ffi.Int> k_list,
  int k_size,
);

/// ----------------------------------------------------------------------------
/// Public Searchsorted (Binary Search) functions
/// ----------------------------------------------------------------------------
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Int,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
  )
>()
external void native_searchsorted_double(
  ffi.Pointer<ffi.Double> array,
  int size,
  ffi.Pointer<ffi.Double> values,
  ffi.Pointer<ffi.Int> out_indices,
  int num_values,
  int side_left,
  ffi.Pointer<ffi.Int> sorter,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
  )
>()
external void native_searchsorted_float(
  ffi.Pointer<ffi.Float> array,
  int size,
  ffi.Pointer<ffi.Float> values,
  ffi.Pointer<ffi.Int> out_indices,
  int num_values,
  int side_left,
  ffi.Pointer<ffi.Int> sorter,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.LongLong>,
    ffi.Int,
    ffi.Pointer<ffi.LongLong>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
  )
>()
external void native_searchsorted_int64(
  ffi.Pointer<ffi.LongLong> array,
  int size,
  ffi.Pointer<ffi.LongLong> values,
  ffi.Pointer<ffi.Int> out_indices,
  int num_values,
  int side_left,
  ffi.Pointer<ffi.Int> sorter,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
  )
>()
external void native_searchsorted_int32(
  ffi.Pointer<ffi.Int> array,
  int size,
  ffi.Pointer<ffi.Int> values,
  ffi.Pointer<ffi.Int> out_indices,
  int num_values,
  int side_left,
  ffi.Pointer<ffi.Int> sorter,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Int,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
  )
>()
external void native_searchsorted_complex128(
  ffi.Pointer<ffi.Double> array,
  int size,
  ffi.Pointer<ffi.Double> values,
  ffi.Pointer<ffi.Int> out_indices,
  int num_values,
  int side_left,
  ffi.Pointer<ffi.Int> sorter,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
  )
>()
external void native_searchsorted_complex64(
  ffi.Pointer<ffi.Float> array,
  int size,
  ffi.Pointer<ffi.Float> values,
  ffi.Pointer<ffi.Int> out_indices,
  int num_values,
  int side_left,
  ffi.Pointer<ffi.Int> sorter,
);

/// ----------------------------------------------------------------------------
/// Utility operations
/// ----------------------------------------------------------------------------
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Size)
>()
external int custom_memcmp(
  ffi.Pointer<ffi.Void> s1,
  ffi.Pointer<ffi.Void> s2,
  int n,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Size)>()
external void native_zero_memory(ffi.Pointer<ffi.Void> ptr, int bytes);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Size)
>()
external void custom_memcpy(
  ffi.Pointer<ffi.Void> dest,
  ffi.Pointer<ffi.Void> src,
  int n,
);

/// ============================================================================
/// SECTION 2: FLAT CONTIGUOUS VECTOR MATHEMATICS (ufuncs)
/// ============================================================================
/// Optimized flat vector sweeps operating on sequential same-shape memory arrays.
/// Bypasses coordinate translation and stride checking entirely for peak performance.
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_add_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_sub_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_mul_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_div_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_sin_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_cos_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);
